# internal/handlers/auth/routes.go
@@ -2,30 +2,35 @@ package auth
 
 import (
 	"smart-scene-app-api/internal/services"
-	l "smart-scene-app-api/pkg/logger"
 	"smart-scene-app-api/server"
 
 	"github.com/gin-gonic/gin"
+	"go.uber.org/zap"
 )
 
-var ll = l.New()
 
 type Handler struct {
 	sc      server.ServerContext
 	service *services.Service
+	logger  *zap.Logger
 }
 
 func NewHandler(sc server.ServerContext) *Handler {
 	return &Handler{
 		sc:      sc,
 		service: services.NewService(sc),
+		logger:  zap.NewExample(),
 	}
 }
 
 func (h *Handler) RegisterRoutes(router *gin.Engine) {
-	auth := router.Group("/auth")
+
+	public := router.Group("/api/v1")
 	{
-		auth.POST("/login", h.Login)
-		auth.POST("/register", h.Register)
+		auth := public.Group("/auth")
+		{
+			auth.POST("/login", h.Login)
+			auth.POST("/register", h.Register)
+		}
 	}
 }
